<resources>
    <string name="app_name">Total GP world</string>

    <string name="app_exit_comfirmation">Quit the application?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>

    <string name="close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="action_report_bug">Report a bug or sumbit a request</string>

    <string name="service_error">Network service is temporarily unavailable or unreachable. Please try again later</string>

    <string name="currrent_season">Current season</string>
    <string name="seasons">Seasons</string>
    <string name="season">Season</string>
    <string name="status">Status</string>
    <string name="circuits">Circuits</string>
    <string name="races">Races</string>
    <string name="qualifying">Qualifying</string>
    <string name="results">Results</string>
    <string name="pitStops">Pit stops</string>
    <string name="lapTimes">Lap times</string>
    <string name="drivers">Drivers</string>
    <string name="rounds">Rounds</string>
    <string name="constructors">Constructors</string>
    <string name="driverStandings">Driver standings</string>
    <string name="constructorStandings">Constructor standings</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="time">Time</string>
    <string name="time2">Time</string>
    <string name="duration">Duration</string>
    <string name="constructorColors">Team colors</string>

    <string name="import_dbimage_title">Importing older seasons data</string>
    <string name="import_dbimage_init">Starting</string>

    <string name="info_fragment_title">Info</string>

    <string name="sort_by">Ordina per&#8230;</string>

    <string name="all_drivers">All drivers</string>

    <string name="section">Section</string>

    <string name="about">About</string>
    <string name="news">News</string>
    <string name="collaborate">Collaborate</string>

    <string name="selected_season">Selected season</string>
    <string name="other">Other</string>
    <string name="statistics">Statistics</string>

    <string name="report_error">Report error</string>
    <string name="bug_report_user_request">Describe your request or problem before this text.\nPlease do not remove the information below, they will serve to solve your problem at best.</string>

    <string name="winningDrivers">Winning drivers</string>
    <string name="winningConstructors">Winning constructors</string>

    <string name="podiumDrivers">Podium drivers</string>
    <string name="podiumConstructors">Podium constructors</string>

    <string name="winningDriverPoints">Winning driver points</string>
    <string name="pointsAssigned">Points assigned</string>
    <string name="racesCompleted">Races Completed</string>

    <string name="play_store">Play store</string>
</resources>
