<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/selected_season">
        <menu>
            <group android:id="@+id/selected_season_menu_group">
                <item
                    android:id="@+id/nav_current_season_driver"
                    android:icon="@drawable/menu_helmet"
                    android:title="@string/drivers" />

                <item
                    android:id="@+id/nav_current_season_constructor"
                    android:icon="@drawable/menu_car"
                    android:title="@string/constructors" />

                <item
                    android:id="@+id/nav_current_season_race"
                    android:icon="@drawable/menu_circuit"
                    android:title="@string/circuits" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/menu_news"
        android:title="@string/news" />

    <item
        android:id="@+id/nav_statistics"
        android:title="@string/statistics">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_stats_drivers"
                    android:icon="@drawable/menu_helmet"
                    android:title="@string/drivers" />
                <item
                    android:id="@+id/nav_stats_constructors"
                    android:icon="@drawable/menu_car"
                    android:title="@string/constructors" />
                <item
                    android:id="@+id/nav_stats_season"
                    android:icon="@drawable/finish_flag"
                    android:title="@string/season" />
            </group>
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_collaborate"
                    android:icon="@drawable/collaborate"
                    android:title="@string/collaborate" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/info"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>
