<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Project: total-gp-world
  ~ File: dbimage_import_layout.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2018 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/import_dbimage_title"
        android:textAppearance="@style/TextAppearance.Large"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/dbimage_percentage_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.Large"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/dbimage_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/dbimage_percentage_tv"
            android:max="0"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progress_bar_horizontal" />
    </RelativeLayout>

    <!-- Seasons -->
    <CheckedTextView
        android:id="@+id/db_seasons_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/seasons"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Status -->
    <CheckedTextView
        android:id="@+id/db_status_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Circuits -->
    <CheckedTextView
        android:id="@+id/db_circuits_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/circuits"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Races -->
    <CheckedTextView
        android:id="@+id/db_races_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/races"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Constructors -->
    <CheckedTextView
        android:id="@+id/db_constructors_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/constructors"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Drivers -->
    <CheckedTextView
        android:id="@+id/db_drivers_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/drivers"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Constructor standings -->
    <CheckedTextView
        android:id="@+id/db_constructorStandings_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/constructorStandings"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Driver standings -->
    <CheckedTextView
        android:id="@+id/db_driverStandings_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/driverStandings"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Qualifying -->
    <CheckedTextView
        android:id="@+id/db_qualifying_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/qualifying"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Results -->
    <CheckedTextView
        android:id="@+id/db_results_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Pit stops -->
    <CheckedTextView
        android:id="@+id/db_pitstops_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/pitStops"
        android:textAppearance="@style/TextAppearance.Medium" />

    <!-- Lap times -->
    <CheckedTextView
        android:id="@+id/db_laptimes_ctv"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/lapTimes"
        android:textAppearance="@style/TextAppearance.Medium" />

</LinearLayout>