<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/sort_by"
            android:textAppearance="@style/TextAppearance.Small" />

        <ImageButton
            android:id="@+id/order_by_driver_img"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/menu_helmet"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/order_by_driver_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/drivers"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Small"/>

        <ImageButton
            android:id="@+id/order_by_time_img"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/clock"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/order_by_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/time"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Small" />

        <ImageButton
            android:id="@+id/order_by_duration_img"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/time"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/order_by_duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@null"
            android:text="@string/duration"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Small"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/swipe_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    layout="@layout/race_stat_pitstops_table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>